# python-project-template

./: LICENSE.md  README.md  main.py  pyproject.toml
src/: __main__.py  mypackage.py  test_main.py
