[tool.poetry]
name = "walkthrough"
version = "0.1.0"
description = ""
authors = ["Romeo Disca <romeo.disca@hq-dielectrics.eu>"]
readme = "README.md"
packages = [
    { include = "mypackage.py", from = "src" },
]

[tool.poetry.scripts]
main = "src.__main__:main"

[tool.poetry.dependencies]
python = "^3.12"
hydra-core = "^1.3.2"


[tool.poetry.group.dev.dependencies]
ruff = "^0.5.2"
mypy = "^1.10.1"
nose2 = "^0.15.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "B"]
ignore = ["E501"]
unfixable = ["B"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402"]
"**/{tests,docs,tools}/*" = ["E402"]

[tool.ruff.format]
quote-style = "single"